# mmdash

./: .gitignore  CLAUDE.md  PRD.md  README.md  docker-compose.yml  stage1-plan.md
backend/: alembic.ini  openapi.json  pyproject.toml  requirements.txt
backend/app/: database.py  main.py  models.py
backend/app/api/: auth.py  git.py  home.py  llm.py  model.py  model_version.py  projects.py  teams.py  timeline.py
backend/app/core/: config.py
backend/app/schemas/: auth.py  project.py  team.py
backend/app/services/: cache.py  document_provider.py  documosa_provider.py  local_file_provider.py  markdown_blocks.py  model_analysis.py  notion.py  notion_fetch.py  notion_provider.py  openai_service.py
backend/app/services/llm/: base.py  deepseek_provider.py  factory.py  openai_provider.py  prompts.py
backend/migrations/: env.py
backend/migrations/versions/: 002_add_team_id_to_provider_bindings.py  003_add_llm_prompts_to_teams.py  00c3f7399f9d_initial_schema.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_git.py  test_home.py  test_llm_prompts.py  test_model.py  test_model_version.py  test_projects.py  test_teams.py  test_timeline.py
backend/tests/unit/: test_llm_providers.py  test_services.py
cloud_agent/: main.py  openapi.json  pyproject.toml  requirements.txt
doc_server/: main.py  openapi.json  pyproject.toml
doc_server/api/: pages.py
doc_server/core/: config.py
doc_server/tests/: test_pages.py
docs/: documosa-integration-requirements.md  mmdash-documosa-integration-spec.md
frontend/: next.config.ts  package-lock.json  package.json  vitest.setup.ts
frontend/app/: globals.css  layout.tsx
frontend/lib/: api.ts  (+1 more)
local_agent/: main.py  pyproject.toml  requirements.txt
redis/: redis.conf
scripts/: dev-start-all.sh  download-redis.sh  setup.sh  start-all.sh  start-doc-server.sh  start-redis.sh  stop-doc-server.sh  stop-redis.sh
(+30 files in other folders)
