[project]
name = "mmdash-backend"
version = "0.1.0"
description = "数模Dashboard - FastAPI Backend"
requires-python = "==3.11.*"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "redis==5.2.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.17",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "httpx==0.27.2",
    "openai==1.54.0",
    "PyPDF2==3.0.1",
    "markdownify==0.13.1",
    "weasyprint==62.3",
    "markdown==3.7",
    "notion-client==2.2.1",
    "gitpython==3.1.43",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]

[tool.uv]
default-groups = []
